<resources>
    <string name="app_name">Gerenciador de Contatos</string>
    <string name="availableContacts">Contatos disponiveis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionar">Adicionar</string>
    <string name="selecione_tipo_contato">Tipo de telefone</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="gerenciar_contatos">Gerenciar Contatos</string>
    <string name="listar">Listar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="dialog_excluir_contatos">Deseja realmente excluir esse contato ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
</resources>